# YoloOnnxRuntimeCPP

./: .gitignore  CMakeLists.txt  README.md  letter_box.h  object_detection.cpp
c++/: CMakeLists.txt  object_detection.cpp  object_segmentation.cpp  video_test.cpp
labels/: imagenet_classes.txt
object_detection/: CMakeLists.txt
python/: DetectObjects.py  Pytorch2Onnx.py  SegmentObjects.py
